# bip324-mitm

./: Cargo.toml  README.md
doc/drawio/: bip324mitm_api.drawio
examples/: README.md  intercept.rs  test_bip324.rs
src/: bip324_external_fschacha20poly1305.rs  bip324_external_lib.rs  cipher.rs  fmt_utils.rs  lib.rs  protocol.rs  relay.rs  state_machine.rs
src/bip324/: data_read.rs  data_write.rs  handshake_read.rs  handshake_write.rs  mod.rs  tests.rs
