[package]
name = "bip324_mitm"
version = "0.1.0"
edition = "2024"

[lib]
name = "bip324_mitm"
path = "src/lib.rs"

[dependencies]
bitcoin_hashes = { version = ">=0.15.0,<0.17.0", default-features = true }
chacha20-poly1305 = "0.1.2"
secp256k1 = { version = "0.29.0", features = ["rand"] }
thiserror = "2.0.18"

[dev-dependencies]
rand = { version = "0.8.0" }
bitcoin = "0.32.8"
hex = { package = "hex-conservative", version = "0.2.0" }
hex-literal = "1.1.0"
# example intercept.rs
nfq = { git = "https://github.com/RazorBest/nfq-rs.git", version = "0.2.6" }
etherparse = "0.19.0"
